# PonsLab_H3Exo

DSP/: torqueDSP5.ipynb
devel/include/h3_msgs/: ControlType.h  ControlTypeRequest.h  ControlTypeResponse.h  DataRecording.h  DataRecordingRequest.h  DataRecordingResponse.h  Joint.h  JointRequest.h  JointResponse.h  State.h  TaskCommand.h  TriggerOutput.h  TriggerOutputRequest.h  TriggerOutputResponse.h
devel/lib/pkgconfig/: dynamic_tutorials.pc  h3_config_controller.pc  h3_hardware_interface.pc  h3_msgs.pc  h3_robot_state_controller.pc  h3_task_controller.pc  joint_stiffness_controller.pc  rqt_h3.pc  tutorial_controller.pc
devel/lib/python3/dist-packages/dynamic_tutorials/cfg/: TutorialsConfig.py
devel/lib/python3/dist-packages/h3_msgs/msg/: _State.py  _TaskCommand.py  __init__.py
devel/lib/python3/dist-packages/h3_msgs/srv/: _ControlType.py  _DataRecording.py  _Joint.py  _TriggerOutput.py  __init__.py
devel/lib/python3/dist-packages/rqt_h3/: __init__.py
devel/share/h3_config_controller/cmake/: h3_config_controllerConfig.cmake
devel/share/h3_msgs/cmake/: h3_msgs-msg-paths.cmake  h3_msgsConfig.cmake
devel/share/h3_robot_state_controller/cmake/: h3_robot_state_controllerConfig.cmake
devel/share/h3_task_controller/cmake/: h3_task_controllerConfig.cmake
devel/share/joint_stiffness_controller/cmake/: joint_stiffness_controllerConfig.cmake
devel/share/roseus/ros/h3_msgs/: manifest.l
devel/share/roseus/ros/h3_msgs/msg/: State.l  TaskCommand.l
devel/share/roseus/ros/h3_msgs/srv/: ControlType.l  DataRecording.l  Joint.l  TriggerOutput.l
devel/share/rqt_h3/cmake/: rqt_h3Config.cmake
devel/share/tutorial_controller/cmake/: tutorial_controllerConfig.cmake
src/technaid_h3_ros-main/: README.md  data_collection.py  filter_pid_test.py  h3_angle_control.py  nogui-torque.py  simple_torque_control.py  torque_control.py  transparent_torque_control.py  transparent_torque_control_LA.py
src/technaid_h3_ros-main/h3_control_client/: CMakeLists.txt  package.xml
src/technaid_h3_ros-main/h3_control_client/config/: h3_effort_controllers.yaml  h3_effort_position_controllers.yaml  h3_group_effort_controller.yaml  h3_interaction_torque_controllers.yaml
src/technaid_h3_ros-main/h3_control_client/launch/: h3_effort_controllers.launch  h3_group_effort_controller.launch  h3_interaction_torque_controllers.launch
src/technaid_h3_ros-main/rqt_h3/: CMakeLists.txt  package.xml  plugin.xml  setup.py
src/technaid_h3_ros-main/rqt_h3/include/rqt_h3/: rqt_h3.h
src/technaid_h3_ros-main/rqt_h3/resource/: h3_command.ui
src/technaid_h3_ros-main/rqt_h3/scripts/: rqt_h3.py
src/technaid_h3_ros-main/rqt_h3/src/rqt_h3/: rqt_h3.cpp
torqueDSP/: README.md  h3Data4.txt  h3Data5_1.txt  torqueDSP.ipynb
